--- a/gog.org
+++ b/gog.org
@@ -1634,15 +1634,15 @@ It was just after dawn and because of, they were well aware, poor planning, the 
 
 The best way to deal with tooth-cats was to avoid them, of course. If that fails there a number of good tips and tricks that kept the smart apes on top.
 
-First, be pokey. Cats hate nothing more than something that is both obviously delicious and pokey.
+Be pokey. Cats hate nothing more than something that is both obviously delicious and pokey.
 
 Two men[fn:: Women were discouraged from involvement. So long as it was just one cat two men did the job, if barely. A coordinated attack involving more than one cat was rare, but a real horror show when it happened.] with sharp spears, nothing fancy, could fend off a tooth-cat a good 9 out of 10 times. Two cleverly wielded spears may as well be all-finger or more. The cat, while gigantic and ferocious, was not going to make any progress and just tire everyone out. They knew this too and so sauntered off eventually, maybe the slightly stupider ones with bloody paws.
 
 A very strong and skilled single man, if also lucky, could wield a spear in each hand and fend off a tooth-cat.
 
-Second, consider a tree. If the mental calculations clearly are in favor of climbing a nearby tree, do so. But your calculations should include getting up three man of branches that must reliably /not/ support the animal's weight. Think about it. It's not an easy thing to get right. There are lots of sturdy trees out there. The cats could and would climb arbitrarily high up a tree, supposing the tree is able to support it. The right tree was too small for a cat to climb and too big for it to knock down.
+Consider a tree. If the mental calculations clearly are in favor of climbing a nearby tree, do so. But your calculations should include getting up three man of branches that must reliably /not/ support the animal's weight. Think about it. It's not an easy thing to get right. There are lots of sturdy trees out there. The cats could and would climb arbitrarily high up a tree, supposing the tree is able to support it. The right tree was too small for a cat to climb and too big for it to knock down.
 
-Third, consider a nice deep hole. It will need to be at least one and one half of one part in depth of the cat's forearm reach, which could be as much as a man. If the opening is subject to digging, forget it.
+Consider a nice deep hole. It will need to be at least one and one half of one part in depth of the cat's forearm reach, which could be as much as a man. If the opening is subject to digging, forget it.
 
 Consider a /lot/ of fire. Tooth-cats are skittish of fire, but they are also not easily impressed.
 
