--- a/gog.org
+++ b/gog.org
@@ -969,7 +969,7 @@ The clubbing-camps were usually overseen by some Great Bear war hero. "Choh-Ov",
 
 Fayt-Caves, which entirely surrounded Choh-Ov, was a shanty town, but carved out of rock, which really looks nicer than shanty any way you cut it. Fayt-Caves was seedy, crime-ridden, full of loud parties on an ongoing basis, had an entire district devoted to hire-baby-makers and their trade. Choh-Ov was more or less the yolk of this sad, desperate fried egg.
 
-And it was small-knowledge[fn:: 'small​[-one​]-knowledge': common sense, widely known.] that this was the norm: Surrounding more or less every clubbing-camp in the Forest and its protectorates was a 'bad neighborhood' by most definitions. No one thought this amiss. It was never questioned[fn:: This effect was also seen surrounding Crec's very few places of high learning, 'scratching-camps'].
+And it was small-knowledge[fn:: 'small\[-one\]-knowledge': common sense, widely known.] that this was the norm: Surrounding more or less every clubbing-camp in the Forest and its protectorates was a 'bad neighborhood' by most definitions. No one thought this amiss. It was never questioned[fn:: This effect was also seen surrounding Crec's very few places of high learning, 'scratching-camps'].
 
 Grav and Gog had decided to leave the day after the revelation of Ender's-Sword, giving them the opportunity to take make a leisurely day of it. They only needed to cover one and one half of one all-finger palm[fn:: About 30 'imperial' miles.] of pretty standard jungle, woods, and scrubby savanna; the way well-traveled and therefore clearly marked, well serviced by vendors, and safe-with-many. They had even let themselves sleep in a bit[fn:: With rare exception, all cavepeople woke at dawn, even on deeply overcast days. Another palm of sleep more, if you found a place dark enough, was considered decadent.]. Since the final part of the journey crossed a wide, flat, scrubby plain and the moon was sufficiently bright, they would be able to travel for hours after dark set in.
 
