--- a/gog.org
+++ b/gog.org
@@ -1193,7 +1193,7 @@ This time, the knowing audience chanted along with Thag as he waived out the syl
 
 It was simple and memorable. That was the point. /Some of the adults in the audience have difficulty with much simpler concepts/, thought Thag.
 
-Thag's voice made a practiced, convincing lizard-bird screech[fn:: A call absolutely never used by the bird itself while on the hunt, where it was as silent as a massive owl might be. The sound was however /exactly/ like one of the well-known lizard-bird sounds and equally loud. Thag had endless practice at /performing/ the screech. The sound could not be credited to him, but Thag knew there was a sort of "symphony" taking place; plenty of talented cavepeople involved at all levels. And in any case, even perceptive adults just a all-finger rows back were unsure where the voice came from.].
+Thag's voice made a practiced, convincing lizard-bird screech[fn:: A call absolutely never used by the bird itself while on the hunt, where it was as silent as a massive owl might be. The sound was however /exactly/ like one of the well-known lizard-bird sounds and equally loud. Thag had endless practice at /performing/ the screech. The sound could not be credited to him, but Thag knew there was a sort of "symphony" taking place; plenty of talented cavepeople involved at all levels. And in any case, even perceptive adults just all-finger rows back were unsure where the voice came from.].
 
 As was always the case with large, temperamental crowds of human children, some added to the known scat-zones, crawling away unembarrassed. The loud, stunning screech was a crowd-pleaser. The scat-er was immediately giggling and dancing soon enough. As the performance went on, feces became ever less a concern for this enraptured Caveman Thag audience.
 
@@ -1951,6 +1951,13 @@ Be careful not to over-think the meaning, but it should be apparent from context
 - Workers :: The "Workers" describe normal people doing normal things. They are distinguished from others only in that they 'sense they are part of something'. They're OK. They're surly but unsure of themselves. They become agreeable and polite when there is talk of any kind of increase in their pay. Grav thinks these people could just choose to focus on other things.
 
 ** Cardinal and Ordinal Directions
+
+
+Directions are always with respect to "morning-sun", meaning: The observer faces East to orient[fn:: See? They're not the first.] themselves and all other directions are relative to East.
+
+Picture yourself facing East (morning-sun) and pointing in the direction that follows.
+
+[facing East] /morning-sun-/ [the direction to the left] /left-side/ [is North]
 
 - morning-sun-left-side: North
 - morning-sun: East
