--- a/gog.org
+++ b/gog.org
@@ -1957,7 +1957,7 @@ Directions are always with respect to "morning-sun", meaning: The observer faces
 
 Picture yourself facing East (morning-sun) and pointing in the direction that follows.
 
-[facing East] /morning-sun-/ [the direction to the left] /left-side/ [is North]
+/[Facing East]/ morning-sun- /[the direction to the left]/ left-side /[is North]
 
 - morning-sun-left-side: North
 - morning-sun: East
