--- a/gog.org
+++ b/gog.org
@@ -1388,7 +1388,7 @@ Grav and Gog looked at each other. Not having a preference for /where/ along the
 
 They followed the stinking baby at a right angle to the trail. As mentioned, forest-children tend to travel as though "everywhere" was an established trail. They could travel the path of a bird, but projected onto the ground. For them, the shortest path between two points was shorter than it is for most.
 
-In the growth strata of most jungle or woods, there was a fairly consistently unoccupied bit of vertical real estate.
+In the growth strata of most jungle or woods, there was a fairly consistently unoccupied bit of vertical real estate near the floor.
 
 There were juicy, mostly edible or at least useful ferns and broad-leafed weeds up to about a pinkie-thumb from the floor. The next-tallest "layer" was probably about nipple-height for an adult Crec.
 
@@ -2085,6 +2085,7 @@ Everything is subject to change, eebureetang. But you'll have to re-title if we 
 
 ** Notes
 
+- Oh-Mas seems to be heading in the direction of the hide when they first meet. Was he heading there to begin with? Does it matter?
 - In he hide, the men were having a kind of "shared dream" before the cat came. /That's why it was quickly forgotten by them/. They recall much later.
 - It would be neat to describe the "toys" given away by Thag.
 - Slates of some drawing or other are taken to the [you need to talk about couriers] the hubs of the network, where, if it is appropriate[fn:: when], they are hastily copied and sent on to the next "node". This results in a "telephone game" effect in a visual sense, as drawings are gradually distorted or "interpreted". Specifically, the Ender's-Stump is clearly /interpreted/ by the slate-picture <-xxx people. The go for a hundred palm in one direction and they can see "oh, it looks like a fish in these parts", etc.
