--- a/gog.org
+++ b/gog.org
@@ -2068,6 +2068,7 @@ Everything is subject to change, eebureetang. But you'll have to re-title if we 
 
 ** Bugs
 
+- Are we /sure/ they have bronze?
 - Sure seems like they should look around more walking in the dangerous woods.
 - Suddenly we introduce "father" as a "term of respect" in chapter 4, yet there were probably many other places where it could be used. Maybe an appendix section on these kinds of "terms" and different speech "registers"..?
 - Verk's joke on Lu makes no sense with the level of sophistication they have. Even if you say "well, after the club wars they had a big Renaissance thing", the hide they share with Oh-Mas is clearly sophisticated, but also way before Crec times BUT the Momma Bear Palace (or whatever) is obviously wicked grand, and yet they did not know to /tie a rope to a boulder and yank it out of the way/?
