--- a/gog.org
+++ b/gog.org
@@ -1410,13 +1410,13 @@ It was getting dark, but was not yet killing-palm. The forest-child seemed unbot
 
 Revealed slowly as they rounded a larger low tree, they could see a sort of hide that was clearly not natural in origin, but was just as clearly very old.
 
-xxx they remark repeatedly about the stink.
-
-It was made out of stone that had been squared. The stones were entirely faceted with flat surfaces cut to meet those of adjoining stones. But the patterns made by these joints on the outer walls were irregular. The wall was none the less very flat both inside and out.
+It was made out of stone that had been squared. The stones were entirely faceted with flat surfaces cut to meet those of adjoining stones. The patterns made by these joints on the outer walls were irregular. The walls were none the less very flat both inside and out.
 
 Any roundness found in the stones appeared to be from erosion of some kind. One could imagine it being /quite/ square in the past. It had a look that the men would both have described as "Unnatural"[fn:: This had a distinctly positive connotation. It had the sense of 'made by skilled cavepeople for utility and comfort.'].
 
-The fine but irregular joints <-xxx better word xxx between the stones gave the impression that the creators had balanced finding appropriately-shaped stones with the trouble of removing material to create a finer fit. The joints between the stones did not make a regular, geometric pattern like one would see in modern block construction. The lines between the stones were more jagged and irregular, but in a pleasing way, and all with but fine lines to describe the places where the stones met, except where erosion had widened these.
+The fine but irregular joints between the stones gave the impression that the creators had balanced finding appropriately-shaped stones with the trouble of removing material to create a finer fit.
+
+The joints between the stones did not make a regular, geometric pattern like one would see in modern block construction. The lines between the stones were more jagged and irregular, but in a pleasing way, and all with but fine lines to describe the places where the stones met, except where erosion had widened these.
 
 The Crec did not have a word for this shape. It was a nearly perfect cube.
 
