--- a/gog.org
+++ b/gog.org
@@ -1400,7 +1400,7 @@ A Crec ecology text book could easily have used a picture of this bit of woods t
 
 The men, their spears now being employed as brush clearing blades[fn:: They did have great knives of bronze capable for example stabbing a person clean through or slicing off a thumb, but as the spines and tougher leaves employed a lot of silica, the edge was quickly warn. Also if clearing a one-time path through the woods involves a lot of cutting, you're doing it wrong.], at which they were barely more useful than any other stick, were swatting away face-sized, fat spiders; small, green vipers; and the occasional poisonous frog or centipede[fn:: And the pretenders of these, who they could immediately identify as harmless, even at this pace, and would try not to wantonly kill.]. The brush was a secondary concern here. They had to compromise comfort to a degree, given the more important preservation of life.
 
-Bringing a spearhead down flat and sharply on top of some of the bigger spiders would make an audible "pop", with a spray spider guts. The two men would sometimes try to get the other with a good spray of spider guts with an expertly angled swat of the spearhead[fn:: In the modern game of golf, this is known as a 'chip'.]. It was a kind of game they had.
+Bringing a spearhead down flat and sharply on top of some of the bigger spiders would make an audible "pop", with a spray of spider guts. The men would sometimes try to get the each other with a shower of spider guts, using an expertly angled swat of the spearhead[fn:: In the modern game of golf, this is known as a 'chip'.]. It was a kind of game they had.
 
 It occurred to them both that if they were the size of a baby, they too would do as forest-children do. They could both see that the baby was having no trouble at all. He was currently dragging his long spear behind him, his hand around its tip, his thumb checking the point for sharpness at intervals[fn:: This is a nervous habit that is frowned upon by the Crec. They call it 'worrying your point' and it's used metaphorically to mean 'getting worked up over nothing'. This /will/ dull a fire-hardened spear point on the scale of days.].
 
