--- a/gog.org
+++ b/gog.org
@@ -1420,7 +1420,11 @@ The joints between the stones did not make a regular, geometric pattern like one
 
 The Crec did not have a word for this shape. It was a nearly perfect cube.
 
-xxx should be way off the path if they didn't even know about it xxx
+They had surely traveled four palm off the established trail to get here and it was in an anonymous looking, not terribly useful part of the forest. Neither had seen nor heard of anything like this, but would be sure to ask around. Maybe _others_ had been seen, if not this one. Any cavepeople capable of creating this would surely have had no trouble building many more.
+
+It was an astonishing structure, mostly in the seemingly wasted time that must have gone into making it so /perfect/.
+
+
 
 xxx oh and some other Crec knows about this thing. "oh yeah. that. that thing's weird. xxx
 
@@ -2085,6 +2089,11 @@ Everything is subject to change, eebureetang. But you'll have to re-title if we 
 - Would like too mechanize this and make a pretty diagram, maybe a python script.
 
 ** Notes
+
+- Maybe the stone hide...
+  - Is a mausoleum.
+  - There are many more.
+  - They go check out later.
 
 - Oh-Mas seems to be heading in the direction of the hide when they first meet. Was he heading there to begin with? Does it matter?
 - In he hide, the men were having a kind of "shared dream" before the cat came. /That's why it was quickly forgotten by them/. They recall much later.
