--- a/gog.org
+++ b/gog.org
@@ -1420,7 +1420,7 @@ The joints between the stones did not make a regular, geometric pattern like one
 
 The Crec did not have a word for this shape. It was a nearly perfect cube.
 
-They had surely traveled four palm off the established trail to get here and it was in an anonymous looking, not terribly useful part of the forest. Neither had seen nor heard of anything like this, but would be sure to ask around. Maybe _others_ had been seen, if not this one. Any cavepeople capable of creating this would surely have had no trouble building many more.
+They had surely traveled four palm off the established trail to get here and it was in an anonymous looking, not terribly useful part of the forest. Neither had seen nor heard of anything like this, but would be sure to ask around. Maybe /others/ had been seen, if not this one. Any cavepeople capable of creating this would surely have had no trouble building many more.
 
 It was an astonishing structure, mostly in the seemingly wasted time that must have gone into making it so /perfect/.
 
