--- a/gog.org
+++ b/gog.org
@@ -1432,7 +1432,7 @@ There was a low, two man long sort of arched hallway made from woven and somewha
 
 This is a contrivance that the men were familiar with. Something like this was used sometimes to protect the opening of a cave from anything big enough to be a threat to humans.
 
-Looking inward, one's eyes were met with a bunch <-xxx of fire-hardened spikes, making entrance impossible for a crazed, hungry predator but still allowing a human to patiently move spikes out of the way, using arms and legs to retain the ones already past, going slow and patiently. A human could get in with some strategy and patience. Nothing dumber could make it through, generally.
+Looking inward, one's eyes were met by the tips of many, usually all-finger all-finger or more fire-hardened points made from fist-diameter, half man long saplings chosen for their stiffness, making entrance impossible for a crazed predator but still allowing a human to enter, patiently move spikes out of the way, using arms and legs to retain the ones already past, going slow and patiently. A human could get in with some strategy and patience. Nothing dumber could make it through, generally.
 
 This was referred to in standard Crecspeak as a spike-guard. It was known to Grav and Gog as a "porcupine-pussy"[fn:: They thought this much more descriptive and poetic.].
 
