--- a/gog.org
+++ b/gog.org
@@ -1440,7 +1440,7 @@ A typical Crec spike-guard had all sorts of clever latches and vine catches that
 
 The baby gave them exasperated but patient looks as he stopped repeatedly to press back some of the more troublesome spears at their base and wait for the two enormous people to ease past all their "pain points".
 
-This was a hide that the forest-child somehow knew about in advance. The plains were not an option this evening, as the forest-child's message was ultimately pretty clear: There would be a lizard-bird hunting this night along the nearby plains[fn:: Which was also usual for a lizard-bird, though they were so rare as daily experiences go they hadn't really anticipated this particular problem, really. Caveman Thag would have been disappointed.].
+This was a hide that the forest-child somehow knew about in advance. The plains were not an option this evening, as the forest-child's message was ultimately pretty clear: There would be a lizard-bird hunting this night along the nearby plains[fn:: This was just another night to the lizard-bird, but they were so rare to the Crec as daily experiences go they hadn't really anticipated this particular problem, really. Caveman Thag would have been disappointed.].
 
 One might ask, "Hey, why not build the hide on the planes where it's safer?" This is because 1. Both the Crec and the forest-children would be hopeless at building something particularly /like/ this, and 2. The plains aren't exactly a safe place to bivouac, unless far away from any patch of woodsy Forest, and then only with some strict protocols, and never alone.
 
