--- a/gog.org
+++ b/gog.org
@@ -1442,7 +1442,7 @@ The baby gave them exasperated but patient looks as he stopped repeatedly to pre
 
 This was a hide that the forest-child somehow knew about in advance. The plains were not an option this evening, as the forest-child's message was ultimately pretty clear: There would be a lizard-bird hunting this night along the nearby plains[fn:: This was just another night to the lizard-bird, but they were so rare to the Crec as daily experiences go they hadn't really anticipated this particular problem, really. Caveman Thag would have been disappointed.].
 
-One might ask, "Hey, why not build the hide on the planes where it's safer?" This is because 1. Both the Crec and the forest-children would be hopeless at building something particularly /like/ this, 2. The plains aren't exactly a safe place to bivouac, unless far away from any patch of woodsy Forest, and then only with some strict protocols, and never alone, and 3. Once on the ground, fending off a lizard-bird trying to get into the hide would be no different from the things they would encounter in the woods, and odds were good the lizard-bird would find them, even in a stone hide.
+One might ask, "Hey, why not build the hide on the plains where it's safer?" This is because 1. Both the Crec and the forest-children would be hopeless at building something particularly /like/ this, 2. The plains aren't exactly a safe place to bivouac, unless far away from any patch of woodsy Forest, and then only with some strict protocols, and never alone, and 3. Once on the ground, fending off a lizard-bird trying to get into the hide would be no different from the things they would encounter in the woods, and odds were good the lizard-bird would find them, even in a stone hide.
 
 And the hide was a perfect solution. They would likely just enjoy a night of periodic but contained terror as they get sniffed out and then mercilessly charged by an animal that gets bloodier and angrier with every failure. All three having spears, they might even possibly enjoy the pleasure of mortally wounding a tooth-cat with a satisfying stab down its throat[fn:: Tooth-cats were /hated/ among the Crec. Tooth-cats were for them what wolves are for modern sheep farming settlers. There was a mindless hatred. They would see no downside to all-out extinction. Every Crec was at most two or three relations away from someone who had been killed and eaten by a tooth-cat.].
 
