--- a/gog.org
+++ b/gog.org
@@ -1458,7 +1458,7 @@ After all-finger or so clicks, there was a blue flash and then a growing flame o
 
 Gog was holding an unfired clay oil lamp with a small, bright, efficient flame at the tip of its sturdy, short nozzle.
 
-This is a kind of travel lamp carried in nearly all kits. Though porous, the outside was waterproofed to the degree possible with pine pitch fixed with a packed layer of soot. This gave the outer surface an asphalt kind of finish that was good for the trail. The finish itself was thick enough to provide some impact protection, which is a big concern for the fragile things you drag around the jungle with you always. And to whatever extent the pitch soaked into the lamp, it was only so much more fuel. Old lamps gave of a distinct comforting smell; grandma, warm fires, salad days.
+This is a kind of travel lamp carried in nearly all kits. Though porous, the outside was waterproofed to the degree possible with pine pitch fixed with a packed layer of soot. This gave the outer surface an asphalt kind of finish that was good for the trail. The finish itself was thick enough to provide some impact protection, which is a big concern for the fragile things you drag around the jungle with you always. And to whatever extent the pitch soaked into the lamp, it was only so much more fuel. Old lamps gave off a distinct comforting smell; grandma, warm fires, salad days.
 
 For fuel you could of course use any one of literally thousands of known flammable oils. One's preferred oil usually came down to which unpleasant characteristics could be endured for the price. Oil was pretty expensive. Wherever you got it, the person you got it from got it in the same way you yourself could have. Your time was worth what his was. So you generally considered the cost of most things, including flame-oils to be about what you'd pay yourself to go out and get some. A lot, in other words. But that value could be obtained in completely different ways: Maybe you're a modern stock broker. Maybe you mine gems with your bare hands.
 
