--- a/gog.org
+++ b/gog.org
@@ -1460,7 +1460,7 @@ Gog was holding an unfired clay oil lamp with a small, bright, efficient flame a
 
 This was a kind of travel lamp carried in nearly all kits. Though porous, the outside was waterproofed to the degree possible with pine pitch fixed with a packed layer of soot. This gave the outer surface an asphalt kind of finish that was good for the trail. The finish itself was thick enough to provide some impact protection, which is a big concern for the fragile things you drag around the Forest with you always. And to whatever extent the pitch soaked into the lamp, it was only so much more fuel. Old lamps gave off a distinct comforting smell; grandma, warm fires, salad days.
 
-For fuel you could of course use any one of literally thousands of known flammable oils. One's preferred oil usually came down to which unpleasant characteristics could be endured for the price. Oil was pretty expensive. Wherever you got it, the person you got it from got it in the same way you yourself could have. Your time was worth what his was. So you generally considered the cost of most things, including flame-oils to be about what you'd pay yourself to go out and get some. A lot, in other words. But that value could be obtained in completely different ways: Maybe you're a modern stock broker. Maybe you mine gems with your bare hands.
+For fuel you could of course use any one of literally thousands of known flammable oils. One's preferred oil usually came down to which unpleasant characteristics could be endured for the price. Oil was pretty expensive. Wherever you got it, the person you obtained it from acquired it in the same way you yourself could have. Your time was worth what his was. So you generally considered the cost of most things, including flame-oils to be about what you'd pay yourself to go out and get some. A lot, in other words. But that value could be obtained in completely different ways: Maybe you're a modern stock broker. Maybe you mine gems with your bare hands.
 
 Of course they had the nicest oil. It also happened to be rather a cheap one as luck would have it. Most considered its smell to be a down side. They thought just the opposite. The lightly refined turpentine[fn:: More or less.] they preferred burned predictably, gave little smoke, had a bright, well-colored flame, and smelled to them like an exhausting day productively working with lumber. It was a nice, crafty kind of smell.
 
