--- a/gog.org
+++ b/gog.org
@@ -1468,7 +1468,7 @@ The worst part of the night, they were sure, was going to be sharing a small bur
 
 In the cheerful glow[fn:: For that is what it was.] of the lamp, the two men scanned the walls for anything bit-y. There was an especially hideous land-crab[fn:: Crec knew plenty about crabs. They were 'exotic' this far away from any source, but they knew well the body plan, the innards, and the delightful /taste/ of crab. The shells were always kept around for some user or other. All you needed was a rich uncle willing to let you sift through his garbage. Somewhere far back in the Crecspeak family tree, someone noticed that this spider, the variety they shared the hide with, looked very much like a crab, had a lot of the same kinds of spines, made a similar clicking when crawling along rock, and provided an almost identical eating experience to their "delicacy" cousins. They were more plentiful, but tasted distinctly worse than actual crab, so it was more "just a name" except to the very hungry. And they were harmless. Huge, but harmless. And also slow and shy until startled.] and a few millipedes that one would not want to touch[fn:: Nothing capable of spraying or snipping off a finger.].
 
-And right in the middle was a pile of burnt bones and cold coals. <-xxx seems like something you need to get back to.
+And right in the middle was a pile of burnt bones and cold coals. This was as expected. Though out of the way, this completely sheltered hide would surely have occasional visitors such as themselves, and it was apparently known to the forest-children.
 
 Having gotten snugly into their hide-burrow and it now being properly dark, as best they could tell in the dark wood, Grav and Gog talked at length about their predicament and plans.
 
