--- a/gog.org
+++ b/gog.org
@@ -1472,7 +1472,9 @@ And right in the middle was a pile of burnt bones and cold coals. This was as ex
 
 Having gotten snugly into their hide-burrow and it now being properly dark, as best they could tell in the dark wood, Grav and Gog talked at length about their predicament and plans.
 
-For one, they would have to awake and get running dangerously early in order too beat conch. They would get docked by xxx for not having shaved[fn:: xx] and not wearing their rhino-calf chest armor[fn:: xxx].
+For one, they would have to awake and get running dangerously early in order too beat conch. They would get one lash each for not having shaved[fn:: Performed with a purpose-made shard of obsidian and of course some lathery soap.] and not wearing their rhino-calf training armor, which they could retrieve, but not in time to beat conch.
+
+Missing conch would mean first getting all-finger lashes, then attending CO lectures regarding obedience, duty and resistance to pain, and finally performing all training that had been scheduled for them that day alone and unsupervised[fn:: The penalty for any kind of shirking was death, so supervision was generally was not required.]. This of course resulted in occasional deaths, so it was a kind of 'death penalty lite'.
 
 The last palm of woods would not be entirely quiet at that time, there being early-risers among predators too. Missing conch was punishable[fn:: xxx] and they were balancing the penalty for that with the reckoned odds of getting eaten by one thing or another along the way.
 
