--- a/gog.org
+++ b/gog.org
@@ -1476,7 +1476,7 @@ For one, they would have to awake and get running dangerously early in order too
 
 Missing conch would mean first getting all-finger lashes, then attending CO lectures regarding obedience, duty and pain, and then finally performing all training that had been scheduled for them that day alone and unsupervised[fn:: The penalty for any kind of shirking was death, so supervision was generally was not required.] likely for palm past the usual first-night bedtime. This of course resulted in occasional deaths, so it was a kind of 'death penalty lite'.
 
-The last palm of woods would not be entirely quiet at that time, there being early-risers among predators too. Missing conch was punishable[fn:: xxx] and they were balancing the penalty for that with the reckoned odds of getting eaten by one thing or another along the way.
+The last palm of woods would not be entirely quiet at that time, there being early-risers among predators too. They were balancing the various penalties they were facing with their reckoned odds of getting eaten by one thing or another along the way.
 
 It was not unusual for a lizard-bird to continue its hunt until early morning, even after dawn. The men did have clear skies and a sliver of morning-moon in their favor.
 
