--- a/gog.org
+++ b/gog.org
@@ -1474,7 +1474,7 @@ Having gotten snugly into their hide-burrow and it now being properly dark, as b
 
 For one, they would have to awake and get running dangerously early in order too beat conch. They would get one lash each for not having shaved[fn:: Performed with a purpose-made shard of obsidian and of course some lathery soap.] and not wearing their rhino-calf training armor, which they could retrieve, but not in time to beat conch.
 
-Missing conch would mean first getting all-finger lashes, then attending CO lectures regarding obedience, duty and pain, and then finally performing all training that had been scheduled for them that day alone and unsupervised[fn:: The penalty for any kind of shirking was death, so supervision was generally was not required.] likely for palm past the usual first-night bedtime. This of course resulted in occasional deaths, so it was a kind of 'death penalty lite'.
+Missing conch would mean first getting all-finger lashes, then attending CO lectures regarding obedience, duty and pain, and then finally performing all training exercises that had been scheduled for them that day alone and unsupervised[fn:: The penalty for any kind of shirking was death, so supervision was generally was not required.] likely until palm past the usual first-night bedtime. This of course resulted in occasional deaths, so it was a kind of 'death penalty lite'.
 
 The last palm of woods would not be entirely quiet at that time, there being early-risers among predators too. They were balancing the various penalties they were facing with their reckoned odds of getting eaten by one thing or another along the way.
 
