--- a/gog.org
+++ b/gog.org
@@ -1480,7 +1480,7 @@ The last palm of woods would not be entirely quiet at that time, there being ear
 
 It was not unusual for a lizard-bird to continue its hunt until early morning, even after dawn. The men did have clear skies and a sliver of morning-moon in their favor.
 
-/Play it by ear; we're safe for now/ was the unspoken conclusion. There was nothing tangible the could do about the future at this point.
+/Play it by ear; we're safe for now/ was the unspoken conclusion. There was nothing tangible they could do about any of it at this point.
 
 Grav and Gog's attention went back to the forest-baby.
 
