--- a/gog.org
+++ b/gog.org
@@ -1514,6 +1514,10 @@ Without ceremony, Gog grabbed the pipe from the baby. For an instant Oh-Mas made
 
 Neither man ever mistook Oh-Mas for an actual baby again. This was clearly only his 'appearance'. Sometimes there was a restrained civility in the forest-child that made the men wonder if he was always in control of himself.
 
+"I'm..." Gog made apologetic gestures to which Oh-Mas gestured 'no bother'.
+
+Gog took a small amount of smoke into his lungs, releasing it immediately.
+
 After watching this and then mindlessly accepting the pipe from Gog, Grav's next recollection was of staring at the ceiling.
 
 He and Gog were laying on the floor face-up, with the tops of their heads a palm apart and each man's feet extending towards the hide's walls.
