--- a/gog.org
+++ b/gog.org
@@ -1524,7 +1524,9 @@ He and Gog were laying on the floor face-up, with the tops of their heads a palm
 
 This put both men's heads squarely in the ash heap of the dead fire pit. They did not appear to mind this.
 
-They were both staring at the ceiling. They had been in a long, convoluted conversation following some of the most inspired trains of thought he could recall when he "came to". Grav immediately felt the frustration of an interesting dream slipping away as tried to recall what they had been talking about, and as with his dreams it seemed like the memories were actively running away from him. He had been both exploring his inner mind and having a deep conversation with Gog at the same time, Gog's voice being more or less detached and coming from nowhere. He wasn't aware nor did he really care where Gog 'was'.
+They were both staring at the ceiling. They had been in a long, convoluted conversation following some of the most inspired trains of thought he could recall when he "came to".
+
+Grav immediately felt the frustration of an interesting dream slipping away as the tried to recall what they had been talking about, and as with his dreams it seemed like the memories were actively running away from him. He had been both exploring his inner mind and having a deep conversation with Gog at the same time, Gog's voice being more or less detached and coming from nowhere. He wasn't aware nor did he really care where Gog 'was'.
 
 The thing that brought his sick-monkey around was Oh-Mas snarling out at the opening, spear at the ready, and a more or less normal, though very slow and very loud breathing from an all-finger all-finger all-finger gourd predator of some kind. Most likely a tooth-cat.
 
