--- a/gog.org
+++ b/gog.org
@@ -1434,9 +1434,9 @@ This is a contrivance that the men were familiar with. Something like this was u
 
 Looking inward, one's eyes were met by the tips of many, usually all-finger all-finger or more fire-hardened points made from fist-diameter, half man long saplings chosen for their stiffness, making entrance impossible for a crazed predator but still allowing a human to enter, patiently move spikes out of the way, using arms and legs to retain the ones already past, going slow and patiently. A human could get in with some strategy and patience. Nothing dumber could make it through, generally.
 
-This was referred to in standard Crecspeak as a spike-guard. It was known to Grav and Gog as a "porcupine-pussy"[fn:: They thought this much more descriptive and poetic.].
+This was referred to in standard Crecspeak as a spear-guard. It was known to Grav and Gog as a "porcupine-pussy"[fn:: They thought this much more descriptive and poetic.].
 
-A typical Crec spike-guard had all sorts of clever latches and vine catches that would make getting /in/ much easier than it was in this case, where they were both struggling, helping one another with a stab here or a smack there, say from the poorly timed release of a branch helpfully bent out of the way by another.
+A typical Crec spear-guard had all sorts of clever latches and vine catches that would make getting /in/ much easier than it was in this case, where they were both struggling, helping one another with a stab here or a smack there, say from the poorly timed release of a branch helpfully bent out of the way by another.
 
 The baby gave them exasperated but patient looks as he stopped repeatedly to press back some of the more troublesome spears at their base and wait for the two enormous people to ease past all their "pain points".
 
@@ -1532,7 +1532,7 @@ The thing that brought his sick-monkey around was Oh-Mas snarling out at the ope
 
 They could see the very tip of one claw slipping in and out of the vine-work nearest the stone. The mass of vine was probably three parts of four of one pinkie-thumb in thickness at the least. The claw, whoever's claw, was at least that long.
 
-And it belonged to an animal smart enough to start work immediately on tearing the vine trap-way away from the hide altogether, which for an averaged sized male cat would mean sure death for them, as it could probably fit a good way into the opening and its reach was enough to at least mince you up sufficiently for dying.
+And it belonged to an animal smart enough to start work immediately on tearing the spear-guard away from the hide altogether, which for an averaged sized male cat would mean sure death for them, as it could probably fit a good way into the opening and its reach was enough to at least mince you up sufficiently for dying.
 
 The gaps between the vine provided enough space for the Oh-Mas to jab it a few times pretty good, to which it audibly reacted, which is a good sign.
 
@@ -2078,6 +2078,7 @@ Everything is subject to change, eebureetang. But you'll have to re-title if we 
 
 ** Bugs
 
+- The hide: it is big enough for the two men to lay out on opposite sides with their heads almost touching but /also/ big enough for a tooth-cat to stick itself in part way and swat and kill them? Naw. Splain.
 - Are we /sure/ they have bronze?
 - Sure seems like they should look around more walking in the dangerous woods.
 - Suddenly we introduce "father" as a "term of respect" in chapter 4, yet there were probably many other places where it could be used. Maybe an appendix section on these kinds of "terms" and different speech "registers"..?
