--- a/gog.org
+++ b/gog.org
@@ -1534,7 +1534,7 @@ They could see the very tip of one claw slipping in and out of the vine-work nea
 
 And it belonged to an animal smart enough to start work immediately on tearing the spear-guard away from the hide altogether, which for an averaged sized male cat would mean sure death for them, as it could probably fit a good way into the opening and its reach was enough to at least mince you up sufficiently for dying.
 
-The gaps between the vine provided enough space for the Oh-Mas to jab it a few times pretty good, to which it audibly reacted, which is a good sign.
+The gaps between the vine provided enough space for Oh-Mas to jab it a few times pretty good, to which it audibly reacted, which is a good sign.
 
 Grav and Gog went back to staring at the ceiling.
 
@@ -1548,7 +1548,9 @@ Grav and Gog could now clearly see the mad beast at the end of the tunnel, the a
 
 Whatever the danger, the two men were captivated.
 
-The cats fangs looked like polished tin, and seemed to be devoid of defect. The gums anchoring the fangs were not pink but blood red, almost purple. Gog could /feel/ how tightly those fangs were held by those gums, which seemed to be made of flexing muscle, actively holding, wielding those fangs. The face-sized symmetrical tongue, tucked far back in the throat had spikes on its surface that went from semitransparent crystal where they were rooted in the tongue, to shiny black at the sharp tips, like tarantula fangs. Its "whiskers" were about a xx diameter at the root.
+The cats fangs looked like polished tin, and seemed to be devoid of defect. The gums anchoring the fangs were not pink but blood red, almost purple. Gog could /feel/ how tightly those fangs were held by those gums, which seemed to be made of flexing muscle, actively holding, wielding those fangs. The face-sized symmetrical tongue, tucked far back in the throat had spikes on its surface that went from semitransparent crystal where they were rooted in the tongue to shiny black at the sharp tips, like tarantula fangs. Its "whiskers" were about a the thickness of one of Oh-Mas' fingers at their base, where they also had a translucence to them.
+
+His coat was shades of orange, yellow and black that, as with a lot of these colors, they could not really describe other than to say 'glowing', even the black. The fur seemed to shimmer not with wind but with each of his movements. His coat seemed like an eternal windswept prairie of glowing colors.
 
 As if in place of saliva, the tiger dripped thick, almost undiluted blood from its mouth, it had no apparent wound in its mouth, but its throat could have easily been pierced so furious and sure were Oh-Mas' jabs.
 
