--- a/gog.org
+++ b/gog.org
@@ -1548,9 +1548,15 @@ Grav and Gog could now clearly see the mad beast at the end of the tunnel, the a
 
 Whatever the danger, the two men were captivated.
 
-The cats fangs looked like polished tin, and seemed to be devoid of defect. The gums anchoring the fangs were not pink but blood red, almost purple. Gog could /feel/ how tightly those fangs were held by those gums, which seemed to be made of flexing muscle, actively holding, wielding those fangs. The face-sized symmetrical tongue, tucked far back in the throat had spikes on its surface that went from semitransparent crystal where they were rooted in the tongue to shiny black at the sharp tips, like tarantula fangs. Its "whiskers" were about a the thickness of one of Oh-Mas' fingers at their base, where they also had a translucence to them.
+The cats fangs looked like polished tin, and seemed to be devoid of defect. The gums anchoring the fangs were not pink but blood red, almost purple. Gog could /feel/ how tightly those fangs were held by those gums, which seemed to be made of flexing muscle, actively holding, wielding those fangs. The face-sized symmetrical tongue, tucked far back in the throat had spikes on its surface that went from semitransparent crystal where they were rooted in the tongue to shiny black at the sharp tips, like tarantula fangs.
 
-His coat was shades of orange, yellow and black that, as with a lot of these colors, they could not really describe other than to say 'glowing', even the black. The fur seemed to shimmer not with wind but with each of his movements. His coat seemed like an eternal windswept prairie of glowing colors.
+Its "whiskers" were about a the thickness of one of Oh-Mas' fingers at their base, where they also had a translucence to them, which seemed to refract the starlight, there suddenly seeming to be no moon or clouds, but only Unnaturally intense starlight.
+
+His coat was shades of orange, yellow and black that, as with a lot of these colors, they could not really describe other than to say 'glowing', even the black. The fur seemed to shimmer and flow not with wind but with each of his movements. For some reason, they could not imagine there being any wind out there, it being scared off too, possibly.
+
+His coat seemed like an eternal windswept prairie of glowing colors.
+
+His still slow, enormous breaths could be felt from within the hide, noticeably increasing the humidity.
 
 As if in place of saliva, the tiger dripped thick, almost undiluted blood from its mouth, it had no apparent wound in its mouth, but its throat could have easily been pierced so furious and sure were Oh-Mas' jabs.
 
