--- a/gog.org
+++ b/gog.org
@@ -1550,7 +1550,7 @@ Whatever the danger, the two men were captivated.
 
 The cats fangs looked like polished tin, and seemed to be devoid of defect. The gums anchoring the fangs were not pink but blood red, almost purple. Gog could /feel/ how tightly those fangs were held by those gums, which seemed to be made of flexing muscle, actively holding, wielding those fangs. The face-sized symmetrical tongue, tucked far back in the throat had spikes on its surface that went from semitransparent crystal where they were rooted in the tongue to shiny black at the sharp tips, like tarantula fangs.
 
-Its "whiskers" were about the thickness of one of Oh-Mas' fingers at their base, where they also had a translucence to them, which seemed to refract the starlight, there suddenly seeming to be no moon or clouds, but only Unnaturally intense starlight. The stars felt /closer/ rather than brighter.
+Its "whiskers" were about the thickness of one of Oh-Mas' fingers at their base, where they also had a translucence to them that seemed to refract the starlight, there suddenly seeming to be no moon or clouds, but only Unnaturally intense starlight. The stars felt /closer/ more than brighter.
 
 His coat was shades of orange, yellow and black that, as with a lot of these colors, they could not really describe other than to say 'glowing', even the black. The fur seemed to shimmer and flow not with wind but with each of his movements. For some reason, they could not imagine there being any wind out there, it being scared off too, possibly.
 
