--- a/gog.org
+++ b/gog.org
@@ -1552,7 +1552,7 @@ The cats fangs looked like polished tin, and seemed to be devoid of defect. The 
 
 Its "whiskers" were about the thickness of one of Oh-Mas' fingers at their base, where they also had a translucence to them that seemed to refract the starlight, there suddenly seeming to be no moon or clouds, but only Unnaturally intense starlight. The stars felt /closer/ more than brighter.
 
-His coat was shades of orange, yellow and black that, as with a lot of these colors, they could not really describe other than to say 'glowing', even the black. The fur seemed to shimmer and flow not with wind but with each of his movements. For some reason, they could not imagine there being any wind out there, it being scared off too, possibly.
+His coat was shades of orange, yellow and black that, as with a lot of these colors, they could not really describe other than to say 'glowing', even the black. The fur seemed to shimmer and flow not with wind but with each of his movements. For some reason, they could not imagine there being any wind out there.
 
 His coat seemed like an eternal windswept prairie of glowing colors.
 
