--- a/gog.org
+++ b/gog.org
@@ -1584,23 +1584,21 @@ It charged the opening, propelling its whole body with hind legs and making sync
 
 It's swatting, almost clapping, but with paws not quite meeting, got more rapid as he approached[fn:: This can be seen in modern domesticated casts. It's known to some as 'fuck your shit up mode'.].
 
-xxx sure seems like if cats like that walking around, no one would go outside.
+All of this was accompanied by a sound that caused physical pain in their ears, a twinge of which they would feel the next day. Notes of this could be felt distinctly one's rib cage.
 
 So long as it stayed where it was, all was safe.
 
 Things began to feel unsafe for the men when they looked at its eyes. To say nothing of the color or patterns in the cats fist-sized eyes, there was clearly /movement/. The cat seemed to have swirls of blue-green, glossy black, silver, and colors that they could later recall but did not have words for. These patterns moved together in an inward whirlpool draining into its black pupils.
 
-yyy
-
 On exceptionally high mountains, on exceptionally cold, crisp winter nights, if you were a caveman blessed with great eyesight and you sat quietly for a palm or more with all fires extinguished, you could see things in the night sky about which no spin-minder had anything but guesses. Enough people had seen these things for there to be little question of their actual existence.
 
-If the sky is clear, you can see the great-river-bottom[fn:: The Milky Way] from anywhere. This was this same kind of "pigment" used to paint these other, fainter shapes. Like the river-bottom, they look like they're made from variously colored sand that is rich in mica.
+If the sky is clear, you could see the great-river-bottom[fn:: The Milky Way] from anywhere. This was this same kind of "pigment" used to paint these other, fainter shapes. Like the river-bottom, they look like they're made from variously colored sand that is rich in mica.
 
 One of these high-night-ghosts[fn:: Nebulae] was a kind of swirl shape, though one seen at an angle[fn:: Andromeda.] It had been given the name 'Ender's-Sink'.
 
-A more relatable example to most Crec would be the appearance of a whirlpool going down a sink, especially when different kinds of flowering duckweed and floating debris gives it some character and shows its "arms".
+A more relatable example to most Crec would be the appearance of a whirlpool going down a natural sink, especially when different kinds of flowering duckweed and floating debris gives it some character and shows its "arms".
 
-The tooth-cat had eyes made of impossible colors that swirled down the drain of its eye; it's soul, perhaps.
+The tooth-cat had eyes made of impossible colors that swirled down the drains of its eyes.
 
 The men stared into these eyes as the swirling became more intense. Light was /coming/ from its eyes.
 
@@ -1616,7 +1614,7 @@ Do I not suffer too? Behold my fury and my might. Like you I must eat to live. I
 
 "No he's not.", Gog whispered as he continued to stare.
 
-Both stunned by the unreality of what was happing, they watched the enormous animal do a graceful turn-about that seemed to happen in slow motion, with the beast looking over it's muscular shoulder as he turned.
+Both stunned by the unreality of what was happening, they watched the enormous animal do a graceful turn-about that seemed to happen in slow motion, with the beast looking over it's muscular shoulder as he turned.
 
 #+begin_quote
 This isn't over.
@@ -1624,19 +1622,25 @@ This isn't over.
 
 The cat accelerated directly away from the hide, not bothering to alter his course for several arm-thick trees that he snapped easily.
 
+His retreat was completely silent.
+
 His flickering light could be seen peeking through the trees as he climbed the plain, seemingly for the stars.
 
-Oh-Mas could be seen shaking his head[fn:: Do we need to document forest-child head movement?!] slowly as if out of disgust while he watched the cat's retreat.
+Oh-Mas could be seen shaking his head[fn:: In this case, forest-child head gestures are like many modern ones: He was shaking his head in disgust.] slowly as if out of disgust while he watched the cat's retreat.
 
 He turned to the men and made a "Hummmphf!" that conveyed annoyance more than relief. The baby sat back down on the floor and worked on relighting his pipe.
 
-# new section or something? are there two lines here?
+# do we want/need some kind of separator here. It's a new day...
 
 The next morning had the unfortunate bleary, "all too real" feeling of a night having been overdone, as if reality did in fact have an anchor and this is what finding a new anchorage felt like.
 
 The unmistakable scent of barbecued game wafted in the air outside. It had the /smell/ of an epic last-night.
 
 Gog had crusty goo surrounding his eyes and what was clearly vomit on his chin stubble. His eyes, while not psychedelic, were quite a sight.
+
+And as Gog could see, such was the case with Grav.
+
+They faced each other and stared.
 
 \clearpage
 
@@ -1648,7 +1652,7 @@ Gog had crusty goo surrounding his eyes and what was clearly vomit on his chin s
 
 Grav was smiling and bobbing his head. "Let's just talk about it later. We need to move."
 
-It was just after dawn and because of, they were well aware, poor planning, the men would have to run some risks to get there and not "/get in trouble/"[fn:: Said trouble needs some describing xxx].
+It was just after dawn and because of, they were well aware, poor planning, the men would have to run some risks to get there and not "/get in trouble/".
 
 The best way to deal with tooth-cats was to avoid them, of course. If that fails there a number of good tips and tricks that kept the smart apes on top.
 
